--- a/hypr/themes/Gruvbox-Retro.conf
+++ b/hypr/themes/Gruvbox-Retro.conf
@@ -3,8 +3,8 @@ exec = gsettings set org.gnome.desktop.interface gtk-theme 'Tokyo-Night'
 exec = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
 
 general {
-    gaps_in = 8
-    gaps_out = 25
+    gaps_in = 4
+    gaps_out = 12
     border_size = 0
     col.active_border = rgba(bb9af7ff) rgba(b4f9f8ff) 45deg
     col.inactive_border = rgba(565f89cc) rgba(9aa5cecc) 45deg
@@ -13,10 +13,10 @@ general {
 }
 
 group {
-    #col.border_active = rgba(bb9af7ff) rgba(b4f9f8ff) 45deg
-    #col.border_inactive = rgba(565f89cc) rgba(9aa5cecc) 45deg
-   # col.border_locked_active = rgba(bb9af7ff) rgba(b4f9f8ff) 45deg
-   # col.border_locked_inactive = rgba(565f89cc) rgba(9aa5cecc) 45deg
+    col.border_active = rgba(bb9af7ff) rgba(b4f9f8ff) 45deg
+    col.border_inactive = rgba(565f89cc) rgba(9aa5cecc) 45deg
+    col.border_locked_active = rgba(bb9af7ff) rgba(b4f9f8ff) 45deg
+    col.border_locked_inactive = rgba(565f89cc) rgba(9aa5cecc) 45deg
 }
 
 decoration {
@@ -25,8 +25,8 @@ decoration {
 
     blur {
         enabled = yes
-        size = 8
-        passes = 9
+        size = 6
+        passes = 3
         new_optimizations = on
         ignore_opacity = on 
         xray = false
